python-tester/log/compile_error_map_17.txt
-MAP ERASE VALUE TEST-

./tmp/outfile_map_17.cpp:31:7: error: no template named 'map' in namespace 'ft'; did you mean 'Map'?
                ft::map<std::string, int> v2;
                ~~~~^~~
                    Map
/Users/durante/Desktop/42-Cursus/cpp-projects/ft2/Map.hpp:9:7: note: 'Map' declared here
class Map {
      ^
1 error generated.
